# smallrace-open-source

./: AUTHORS  Dockerfile  INSTALL  LICENSE  README.md  REQUIREMENTS  STATUS
SmallRace-Detector/: CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  buildscript.txt
SmallRace-Detector/cmake/: CompilerWarnings.cmake
SmallRace-Detector/src/: CMakeLists.txt  RaceDetect.cpp  RaceDetect.h  main.cpp
SmallRace-Detector/src/Analysis/: ForkAtCounter.cpp  ForkAtCounter.h  HappensBeforeGraph.cpp  HappensBeforeGraph.h  LockSet.cpp  SharedMemory.cpp  SimpleAlias.cpp  SimpleAlias.h
SmallRace-Detector/src/Demangler/: Demangler.h
SmallRace-Detector/src/IR/: Builder.cpp  Builder.h  IR.cpp  IR.h  IRImpls.h
SmallRace-Detector/src/LanguageModel/: LLVMInstrinsics.h  OpenMP.h  RaceModel.cpp  RaceModel.h  SmalltalkModel.h  pthread.h
SmallRace-Detector/src/PointerAnalysis/: CMDOptions.cpp  PointerAnalysisPass.h
SmallRace-Detector/src/PointerAnalysis/Context/: CtxTrait.h  HybridCtx.h  KCallSite.h  KOrigin.h  NoCtx.h  PtrRingBuffer.h
SmallRace-Detector/src/PointerAnalysis/Graph/: CallGraph.h
SmallRace-Detector/src/PointerAnalysis/Graph/ConstraintGraph/: CGNodeBase.h  CGObjNode.h  CGPtrNode.h  CGSuperNode.h  ConstraintGraph.h  SCCIterator.h
SmallRace-Detector/src/PointerAnalysis/Graph/GraphBase/: GraphBase.h
SmallRace-Detector/src/PointerAnalysis/Models/LanguageModel/: ConsGraphBuilder.h  InterceptResult.h  LangModelBase.h  LangModelTrait.h  PtrNodeManager.h
SmallRace-Detector/src/PointerAnalysis/Models/LanguageModel/DefaultLangModel/: DefaultExtFunctions.h  DefaultLangModel.cpp  DefaultLangModel.h
SmallRace-Detector/src/PointerAnalysis/Models/MemoryModel/: Canonicalizer.cpp  DefaultHeapModel.cpp  DefaultHeapModel.h  MemModelTrait.h
SmallRace-Detector/src/PointerAnalysis/Models/MemoryModel/CppMemModel/: CppMemModel.h
SmallRace-Detector/src/PointerAnalysis/Models/MemoryModel/CppMemModel/PreprocessingPasses/: RewriteModeledAPIPass.cpp  RewriteModeledAPIPass.h
SmallRace-Detector/src/PointerAnalysis/Models/MemoryModel/CppMemModel/SpecialObject/: VTablePtr.cpp  VTablePtr.h  Vector.cpp  Vector.h
SmallRace-Detector/src/PointerAnalysis/Models/MemoryModel/FieldInsensitive/: FICanonicalizer.h  FIMemModel.h  FIObject.h
SmallRace-Detector/src/PointerAnalysis/Models/MemoryModel/FieldSensitive/: FSCanonicalizer.h  FSMemModel.h  FSObject.h  MemBlock.h
SmallRace-Detector/src/PointerAnalysis/Models/MemoryModel/FieldSensitive/Layout/: ArrayLayout.h  Layouts.cpp  MemLayout.h  MemLayoutManager.h  Util.cpp  Util.h
SmallRace-Detector/src/PointerAnalysis/Program/: AllocSite.h  CallSite.cpp  CallSite.h  CtxFunction.h  CtxModule.h  Object.h  Pointer.h
SmallRace-Detector/src/PointerAnalysis/Solver/: Andersen.h  AndersenWave.h  PartialUpdateSolver.h  PointsToSet.cpp  SolverBase.h
SmallRace-Detector/src/PointerAnalysis/Solver/PointsTo/: BitVectorPTS.h  PTSTrait.h  PointedByPts.h
SmallRace-Detector/src/PointerAnalysis/Util/: CtxInstVisitor.h  GraphWriter.h  Iterators.h  SingleInstanceOwner.h  TypeMetaData.cpp  TypeMetaData.h  Util.cpp  Util.h
SmallRace-Detector/src/Reporter/: Reporter.cpp  Reporter.h
SmallRace-Detector/src/Trace/: Event.cpp  Event.h  EventImpl.cpp  EventImpl.h  ProgramTrace.cpp  ProgramTrace.h  ThreadTrace.cpp  ThreadTrace.h
SmallRace-Detector/util/: extractTime.py  ranking.py
SmallRace-Generator/: CMakeLists.txt  README.md
SmallRace-Generator/examples/: Example.ws  SharedStateExamples.st  t.ll
SmallRace-Generator/lib/libxml2/: README.md  SAX2.c  parser.c
SmallRace-Generator/lib/libxml2/include/libxml/: tree.h  xmlversion.h
SmallRace-Generator/tools/RaceDetector/: CMakeLists.txt
SmallRace-Generator/tools/RaceDetector/include/: CMakeLists.txt
SmallRace-Generator/tools/RaceDetector/include/ast/: AST.h
SmallRace-Generator/tools/RaceDetector/include/st/: CMakeLists.txt  Ops.td  ParserWrapper.h  STDialect.h  STParserListener.h  STParserVisitor.h
SmallRace-Generator/tools/RaceDetector/src/: STRaceDetector.cpp
SmallRace-Generator/tools/RaceDetector/src/st/: LowerToLLVM.cpp  MLIRGen.cpp  STDialect.cpp
SmallRace-Generator/utils/antlr/antlr4cpp/src/antlr4cpp-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
SmallRace-Generator/utils/antlr/antlr4cpp/src/antlr4cpp-build/UILD_TESTS=OFF/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
SmallRace-Generator/utils/antlr/antlr4cpp/src/antlr4cpp-build/UILD_TESTS=OFF/runtime/: Makefile  cmake_install.cmake
SmallRace-Generator/utils/antlr/antlr4cpp/src/antlr4cpp-build/runtime/: Makefile  cmake_install.cmake
SmallRace-Generator/utils/parser/: Smalltalk.g4  Smalltalk.interp  Smalltalk.tokens  SmalltalkBaseListener.cpp  SmalltalkBaseListener.h  SmalltalkBaseVisitor.cpp  SmalltalkBaseVisitor.h  SmalltalkLexer.cpp  SmalltalkLexer.h  SmalltalkLexer.interp  SmalltalkListener.cpp  SmalltalkListener.h  SmalltalkParser.cpp  SmalltalkParser.h  SmalltalkVisitor.cpp  SmalltalkVisitor.h  run
(+20 files in other folders)
